WebAPIApp/WeatherForecast/k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmdb-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tmdb-api
  template:
    metadata:
      labels:
        app: tmdb-api
    spec:
      containers:
        - name: tmdb-api
          image: tmdb-film-library:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
