WebAPIApp/WeatherForecast/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmdb-api-service
spec:
  selector:
    app: tmdb-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
