WebAPIApp/WeatherForecast/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmdb-api-ingress
spec:
  rules:
    - host: tmdb-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tmdb-api-service
                port:
                  number: 80
